/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.company.inventory_management_system.database;

import com.company.inventory_management_system.admin_role.CustomerProduct;
import java.time.LocalDate;
import java.time.format.DateTimeFormatter;

/**
 *
 * @author zeyad
 */
public class CustomerProductDatabase extends Database{

    public CustomerProductDatabase(String fileName) {
        super(fileName);
    }
    
    

    @Override
    public Record createRecordFrom(String line) {
        if(line == null){
            System.out.println("please input the data separated by ,");
            return null;
        }
        String[] fields = line.replace(" ","").split(",");
        if(fields.length != 3){
            System.out.println("Invalid line input");
            return  null;
        }
        // the default formatter is yyyy-mm-dd so need to make the our formatter.
        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy");
        return  new CustomerProduct(fields[0],fields[1],LocalDate.parse(fields[2], formatter));
    }
    
}
