/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.company.inventory_management_system.database;

import java.util.ArrayList;

/**
 *
 * @author zeyad
 */
public abstract class Database {
    private String fileName;
    private ArrayList<Record> records;
}
