/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.company.inventory_management_system.database;

/**
 *
 * @author zeyad
 */
public interface Record {
    public String lineRepresentation();
    public String getSearchKey();
}
